Implement text cutting algorithm

--- a/components/framework/meson.build
+++ b/components/framework/meson.build
@@ -62,6 +62,7 @@ sloked_src = [
   'src/sched/Scheduler.cpp',
   'src/screen/Component.cpp',
   'src/screen/ComponentTree.cpp',
+  'src/screen/Point.cpp',
   'src/screen/Splitter.cpp',
   'src/screen/terminal/multiplexer/TerminalWindow.cpp',
   'src/screen/terminal/multiplexer/TerminalBuffer.cpp',
