Implement socket buffering

--- a/components/framework/meson.build
+++ b/components/framework/meson.build
@@ -56,6 +56,7 @@ sloked_src = [
   'src/namespace/Resolve.cpp',
   'src/namespace/View.cpp',
   'src/namespace/Virtual.cpp',
+  'src/net/BufferedSocket.cpp',
   'src/net/CryptoSocket.cpp',
   'src/net/Socket.cpp',
   'src/sched/EventLoop.cpp',
