Implement minimal unit tests for ordered cache

--- a/components/framework/tests/meson.build
+++ b/components/framework/tests/meson.build
@@ -1,6 +1,7 @@
 sloked_tests_src = [
     'main.cpp',
-    'core/Base64.cpp'
+    'core/Base64.cpp',
+    'core/Cache.cpp'
 ]
 
 sloked_framework_tests = executable('sloked_framework_tests', sloked_tests_src,
