Implement minimal char preset unit tests

--- a/components/framework/tests/meson.build
+++ b/components/framework/tests/meson.build
@@ -1,7 +1,8 @@
 sloked_tests_src = [
     'main.cpp',
     'core/Base64.cpp',
-    'core/Cache.cpp'
+    'core/Cache.cpp',
+    'core/CharPreset.cpp'
 ]
 
 sloked_framework_tests = executable('sloked_framework_tests', sloked_tests_src,
