Implement counter unit tests

--- a/components/framework/tests/meson.build
+++ b/components/framework/tests/meson.build
@@ -2,7 +2,8 @@ sloked_tests_src = [
     'main.cpp',
     'core/Base64.cpp',
     'core/Cache.cpp',
-    'core/CharPreset.cpp'
+    'core/CharPreset.cpp',
+    'core/Counter.cpp'
 ]
 
 sloked_framework_tests = executable('sloked_framework_tests', sloked_tests_src,
