Implement basic cairo bindings

--- a/components/frontend/meson.build
+++ b/components/frontend/meson.build
@@ -8,4 +8,4 @@ frontend_flags += sloked_compat_flags
 
 frontend = executable('sloked', frontend_src,
   cpp_args : frontend_flags,
-  dependencies : [sloked_framework, sloked_compat, sloked_ui_sdl])
+  dependencies : [sloked_framework, sloked_compat, sloked_ui_cairo_sdl])
