Implement basic cairo-based terminal

--- a/components/ui-cairo/meson.build
+++ b/components/ui-cairo/meson.build
@@ -1,10 +1,11 @@
 sloked_ui_cairo_sdl_src = [
+  'src/screen/cairo/SDL.cpp',
   'src/screen/sdl/Event.cpp',
   'src/screen/sdl/Renderer.cpp',
   'src/screen/sdl/Surface.cpp',
   'src/screen/sdl/Texture.cpp',
   'src/screen/sdl/Window.cpp',
-  # 'src/screen/terminal/CairoTerminal.cpp'
+  'src/screen/terminal/CairoTerminal.cpp'
 ]
 
 sdl2 = dependency('sdl2')
