--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,4 +1,4 @@
 option('crypto', type: 'string', value: 'openssl')
 option('compression', type: 'string', value: 'zlib')
 option('scripting_lua', type: 'boolean', value: 'true')
-option('terminal', type: 'string', value: 'cairo')
+option('graphics', type: 'string', value: 'cairo_sdl')
