Move platform-independent initialization to separate "core plugin"

--- a/components/frontend/meson.build
+++ b/components/frontend/meson.build
@@ -1,6 +1,9 @@
 
 frontend_src = [
-  'main.cpp'
+  'main.cpp',
+  'src/CorePlugin.cpp',
+  'src/Graphics.cpp',
+  'src/Namespace.cpp'
 ]
 
 frontend_flags = []
@@ -8,4 +11,5 @@ frontend_flags += sloked_compat_flags
 
 frontend = executable('sloked', frontend_src,
   cpp_args : frontend_flags,
+  include_directories : include_directories('headers'),
   dependencies : [sloked_framework, sloked_compat])
