--- a/components/framework/tests/meson.build
+++ b/components/framework/tests/meson.build
@@ -10,8 +10,9 @@ sloked_tests_src = [
     'core/Event.cpp'
 ]
 
+threads = dependency('threads')
 sloked_framework_tests = executable('sloked_framework_tests', sloked_tests_src,
   include_directories : include_directories('../../../third-party'),
-  dependencies : sloked_framework)
+  dependencies : [threads, sloked_framework])
 
 test('Framework unit tests', sloked_framework_tests)
