--- a/components/platform/posix/meson.build
+++ b/components/platform/posix/meson.build
@@ -12,11 +12,12 @@ posix_platform_src = [
   'src/screen/terminal/posix/PosixTerminal.cpp'
 ]
 
+atomic = cpp.find_library('atomic', required : false)
 ncurses = cpp.find_library('ncurses')
 sloked_posix_platform_flags = '-DSLOKED_PLATFORM_POSIX'
 sloked_posix_platform_lib = static_library('sloked_posix_platform', posix_platform_src,
   include_directories : include_directories('headers'),
   cpp_args: sloked_posix_platform_flags,
-  dependencies : [ncurses, sloked_framework])
+  dependencies : [ncurses, atomic, sloked_framework])
 sloked_posix_platform = declare_dependency(link_with : sloked_posix_platform_lib,
   include_directories : include_directories('headers'))
