Refactor compatibility component and extract interface with all compatibility options

--- a/components/compat/meson.build
+++ b/components/compat/meson.build
@@ -1,4 +1,5 @@
 compat_src = [
+  'src/Compat.cpp',
   'src/compression/Compat.cpp',
   'src/core/awaitable/Compat.cpp',
   'src/crypto/Compat.cpp',
