--- a/components/script/lua/meson.build
+++ b/components/script/lua/meson.build
@@ -9,6 +9,7 @@ lua_bindings_src = [
 ]
 
 lua = dependency('lua', required : false)
+threads = dependency('threads')
 if not lua.found()
 	lua = dependency('lua-5.3', required : true)
 endif
@@ -16,6 +17,6 @@ sloked_lua_bindings_flags = ['-DSLOKED_FEATURE_SCRIPTING', '-DSLOKED_FEATURE_SCR
 sloked_lua_bindings_lib = static_library('sloked_lua', lua_bindings_src,
   cpp_args : sloked_lua_bindings_flags,
   include_directories : include_directories('headers'),
-  dependencies : [lua, sloked_framework])
+  dependencies : [lua, threads, sloked_framework])
 sloked_lua_bindings = [declare_dependency(link_with : sloked_lua_bindings_lib,
   include_directories : include_directories('headers')), lua]
