Split core plugin and bootstrap into separate components

--- a/components/frontend/meson.build
+++ b/components/frontend/meson.build
@@ -1,15 +1,8 @@
 
 frontend_src = [
-  'src/CorePlugin.cpp',
-  'src/main.cpp',
-  'src/Namespace.cpp',
-  'src/Graphics.cpp'
+  'src/CorePlugin.cpp'
 ]
 
-frontend_flags = []
-frontend_flags += sloked_compat_flags
-
-frontend = executable('sloked', frontend_src,
-  cpp_args : frontend_flags,
-  include_directories : include_directories('headers'),
-  dependencies : [sloked_framework, sloked_compat])
+sloked_frontend_lib = shared_library('sloked_frontend_core', frontend_src,
+  dependencies : [sloked_framework])
+sloked_frontend = [declare_dependency(link_with : sloked_frontend_lib)]
