Implement dynamic library loader

--- a/components/compat/meson.build
+++ b/components/compat/meson.build
@@ -1,6 +1,7 @@
 compat_src = [
   'src/Compat.cpp',
   'src/compression/Compat.cpp',
+  'src/core/Compat.cpp',
   'src/core/awaitable/Compat.cpp',
   'src/crypto/Compat.cpp',
   'src/editor/configuration/Compat.cpp',
