--- a/components/platform/posix/meson.build
+++ b/components/platform/posix/meson.build
@@ -1,4 +1,5 @@
 posix_platform_src = [
+  'src/core/Library.cpp',
   'src/core/awaitable/Posix.cpp',
   'src/editor/PosixConfiguration.cpp',
   'src/filesystem/posix/File.cpp',
@@ -14,10 +15,11 @@ posix_platform_src = [
 
 atomic = cpp.find_library('atomic', required : false)
 ncurses = cpp.find_library('ncurses')
+dl = cpp.find_library('dl')
 sloked_posix_platform_flags = '-DSLOKED_PLATFORM_POSIX'
 sloked_posix_platform_lib = static_library('sloked_posix_platform', posix_platform_src,
   include_directories : include_directories('headers'),
   cpp_args: sloked_posix_platform_flags,
-  dependencies : [ncurses, atomic, sloked_framework])
+  dependencies : [ncurses, dl, atomic, sloked_framework])
 sloked_posix_platform = declare_dependency(link_with : sloked_posix_platform_lib,
   include_directories : include_directories('headers'))
