--- a/meson_options.txt
+++ b/meson_options.txt
@@ -2,3 +2,4 @@ option('crypto', type: 'string', value: 'openssl')
 option('compression', type: 'string', value: 'zlib')
 option('scripting_lua', type: 'boolean', value: 'true')
 option('graphics', type: 'string', value: 'cairo_sdl')
+option('default_core_plugin', type: 'boolean', value: 'true')
