Refactor and improve multithreading implementatiion

--- a/components/framework/meson.build
+++ b/components/framework/meson.build
@@ -15,7 +15,6 @@ sloked_src = [
   'src/core/Scope.cpp',
   'src/core/Semaphore.cpp',
   'src/core/String.cpp',
-  'src/sched/ThreadManager.cpp',
   'src/core/URI.cpp',
   'src/core/encoding/Utf8.cpp',
   'src/core/encoding/Utf32LE.cpp',
@@ -62,9 +61,12 @@ sloked_src = [
   'src/net/CompressedSocket.cpp',
   'src/net/CryptoSocket.cpp',
   'src/net/Socket.cpp',
-  'src/sched/ActionQueue.cpp',
   'src/sched/EventLoop.cpp',
+  'src/sched/Executor.cpp',
+  'src/sched/MultithreadExecutor.cpp',
   'src/sched/Scheduler.cpp',
+  'src/sched/ScopedExecutor.cpp',
+  'src/sched/SequentialExecutor.cpp',
   'src/screen/Component.cpp',
   'src/screen/ComponentTree.cpp',
   'src/screen/Manager.cpp',
