--- a/components/framework/meson.build
+++ b/components/framework/meson.build
@@ -61,11 +61,13 @@ sloked_src = [
   'src/net/CompressedSocket.cpp',
   'src/net/CryptoSocket.cpp',
   'src/net/Socket.cpp',
+  'src/sched/DefaultScheduler.cpp',
   'src/sched/EventLoop.cpp',
   'src/sched/Executor.cpp',
   'src/sched/MultithreadExecutor.cpp',
   'src/sched/Scheduler.cpp',
   'src/sched/ScopedExecutor.cpp',
+  'src/sched/ScopedScheduler.cpp',
   'src/sched/SequentialExecutor.cpp',
   'src/screen/Component.cpp',
   'src/screen/ComponentTree.cpp',
