Replace task scope notifications by abstract lifetimes

--- a/components/framework/meson.build
+++ b/components/framework/meson.build
@@ -64,12 +64,12 @@ sloked_src = [
   'src/sched/DefaultScheduler.cpp',
   'src/sched/EventLoop.cpp',
   'src/sched/Executor.cpp',
+  'src/sched/Lifetime.cpp',
   'src/sched/MultithreadExecutor.cpp',
   'src/sched/Scheduler.cpp',
   'src/sched/ScopedExecutor.cpp',
   'src/sched/ScopedScheduler.cpp',
   'src/sched/SequentialExecutor.cpp',
-  'src/sched/TaskNotifications.cpp',
   'src/screen/Component.cpp',
   'src/screen/ComponentTree.cpp',
   'src/screen/Manager.cpp',
