Implement unit tests for local pipe

--- a/src/components/framework/tests/meson.build
+++ b/src/components/framework/tests/meson.build
@@ -19,7 +19,8 @@ sloked_tests_src = [
     'core/Scope.cpp',
     'core/Span.cpp',
     'core/String.cpp',
-    'core/VLQ.cpp'
+    'core/VLQ.cpp',
+    'kgr/Pipe.cpp'
 ]
 
 threads = dependency('threads')
