Extend framework to simplify integration tests

--- a/src/components/framework/meson.build
+++ b/src/components/framework/meson.build
@@ -24,6 +24,7 @@ sloked_src = [
   'src/editor/EditorServer.cpp',
   'src/editor/Manager.cpp',
   'src/editor/ScreenServer.cpp',
+  'src/editor/Shutdown.cpp',
   'src/editor/doc-mgr/Document.cpp',
   'src/editor/doc-mgr/DocumentSet.cpp',
   'src/editor/doc-mgr/DocumentUpstream.cpp',
@@ -78,6 +79,7 @@ sloked_src = [
   'src/screen/Point.cpp',
   'src/screen/Splitter.cpp',
   'src/screen/graphics/Terminal.cpp',
+  'src/screen/terminal/NullTerminal.cpp',
   'src/screen/terminal/multiplexer/TerminalWindow.cpp',
   'src/screen/terminal/multiplexer/TerminalBuffer.cpp',
   'src/screen/terminal/multiplexer/TerminalSplitter.cpp',
@@ -104,6 +106,7 @@ sloked_src = [
   'src/services/Screen.cpp',
   'src/services/Search.cpp',
   'src/services/Service.cpp',
+  'src/services/Shutdown.cpp',
   'src/services/TextPane.cpp',
   'src/services/TextRender.cpp',
   'src/text/TextBlock.cpp',
