--- a/src/meson_options.txt
+++ b/src/meson_options.txt
@@ -3,3 +3,4 @@ option('compression', type: 'string', value: 'zlib')
 option('scripting_lua', type: 'boolean', value: 'true')
 option('graphics', type: 'string', value: 'cairo_sdl')
 option('default_application', type: 'boolean', value: 'true')
+option('build_headless', type: 'boolean', value: 'true')
