--- a/src/components/sloked-nodejs/package.json
+++ b/src/components/sloked-nodejs/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "start": "tsc && node dist/sample.js"
+    "start": "tsc && node dist/sample.js",
+    "build": "tsc"
   },
   "author": "Jevgenijs Protopopovs",
   "license": "LGPL-3.0",
