--- a/src/components/headless/src/config.json
+++ b/src/components/headless/src/config.json
@@ -1,4 +1,8 @@
 {
+    "configurationServer": {
+        "host": "::1",
+        "port": 4567
+    },
     "containers": {
         "main": {
             "crypto": {
