--- a/src/components/headless/application-lib/meson.build
+++ b/src/components/headless/application-lib/meson.build
@@ -5,3 +5,4 @@ headless_src = [
 
 sloked_headless_app_lib = shared_library('sloked_headless_app', headless_src,
   dependencies : [sloked_framework])
+sloked_frontend = [declare_dependency(link_with : sloked_headless_app_lib)]
