Split headless application into two variants

--- a/src/components/headless/package.json
+++ b/src/components/headless/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node dist/index.js"
+    "standalone": "tsc && node dist/standalone.js",
+    "detached": "tsc && node dist/detached.js"
   },
   "author": "Jevgenijs Protopopovs",
   "license": "LGPL-3.0",
