--- a/src/components/platform/win32/meson.build
+++ b/src/components/platform/win32/meson.build
@@ -7,7 +7,9 @@ win32_platform_src = [
   'src/filesystem/win32/Reader.cpp',
   'src/filesystem/win32/Writer.cpp',
   'src/filesystem/win32/View.cpp',
-  'src/namespace/win32/Filesystem.cpp'
+  'src/namespace/win32/Environment.cpp',
+  'src/namespace/win32/Filesystem.cpp',
+  'src/net/Win32Socket.cpp'
 ]
 
 atomic = cpp.find_library('atomic', required : false)
