Fixes and basic windows terminal support

--- a/src/components/headless/src/config.json
+++ b/src/components/headless/src/config.json
@@ -56,7 +56,7 @@
             },
             "server": {
                 "screen": {
-                    "uri": "null:",
+                    "uri": "terminal:",
                     "tabWidth": 2
                 },
                 "slave": {
