Implement backtrace printer for win32

--- a/src/components/framework/meson.build
+++ b/src/components/framework/meson.build
@@ -132,10 +132,11 @@ cpp = meson.get_compiler('cpp')
 
 atomic = cpp.find_library('atomic', required : false)
 execinfo = cpp.find_library('execinfo', required : false)
+dbghelp = cpp.find_library('Dbghelp', required : false)
 threads = dependency('threads')
 sloked_framework_lib = shared_library('sloked', sloked_src,
   include_directories : include_directories('headers'),
-  dependencies : [threads, atomic, execinfo])
+  dependencies : [threads, atomic, execinfo, dbghelp])
 sloked_framework = declare_dependency(link_with : sloked_framework_lib,
   include_directories : include_directories('headers'))
 
