--- a/src/meson_options.txt
+++ b/src/meson_options.txt
@@ -5,3 +5,4 @@ option('graphics', type: 'string', value: 'cairo_sdl')
 option('default_application', type: 'boolean', value: 'true')
 option('build_headless', type: 'boolean', value: 'true')
 option('platform', type: 'string', value: 'posix')
+option('link_libatomic', type: 'string', value: '')
