--- a/src/components/headless/src/config.json
+++ b/src/components/headless/src/config.json
@@ -1,17 +1,62 @@
 {
     "configurationServer": {
-        "host": "127.0.0.1",
+        "host": "localhost",
         "port": 4567
     },
     "containers": {
         "main": {
+            "crypto": {
+                "authentication": {
+                    "master": {
+                        "defaultUser": {
+                            "restrictAccess": {
+                                "content": [],
+                                "whitelist": true
+                            },
+                            "restrictModification": {
+                                "content": [],
+                                "whitelist": true
+                            }
+                        },
+                        "masterPassword": "password",
+                        "salt": "salt",
+                        "users": [
+                            {
+                                "id": "user1",
+                                "password": "password1",
+                                "restrictAccess": {
+                                    "content": [
+                                        "/document",
+                                        "/namespace",
+                                        "/screen",
+                                        "/editor",
+                                        "/plugins"
+                                    ],
+                                    "whitelist": true
+                                },
+                                "restrictModification": {
+                                    "content": [
+                                        "/screen",
+                                        "/plugins"
+                                    ],
+                                    "whitelist": true
+                                }
+                            }
+                        ]
+                    }
+                },
+                "defaultKey": {
+                    "password": "password"
+                },
+                "salt": "salt"
+            },
             "network": {
                 "buffering": 5,
                 "compression": true
             },
             "server": {
                 "netServer": {
-                    "host": "127.0.0.1",
+                    "host": "::1",
                     "port": 1234
                 },
                 "restrictAccess": {
@@ -50,20 +95,37 @@
             }
         },
         "secondary": {
+            "crypto": {
+                "authentication": {
+                    "slave": {
+                        "users": [
+                            {
+                                "id": "user1",
+                                "password": "password1"
+                            }
+                        ]
+                    }
+                },
+                "defaultKey": {
+                    "password": "password"
+                },
+                "salt": "salt"
+            },
             "network": {
                 "buffering": 5,
                 "compression": true
             },
             "server": {
                 "screen": {
-                    "uri": "terminal:",
+                    "uri": "graphics://?fallback=terminal",
                     "tabWidth": 2
                 },
                 "slave": {
                     "address": {
                         "host": "localhost",
                         "port": 1234
-                    }
+                    },
+                    "authorize": "user1"
                 }
             }
         }
